2018-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Provide a memory resource limit
	(of 1/5th the memory resource limit for Graphicsmagick) to libjpeg
	to limit how much memory it might consume for itself while reading
	a file.  Fixes oss-fuzz 9096 "graphicsmagick/coder_JPEG_fuzzer:
	Timeout in graphicsmagick_coder_JPEG_fuzzer".  (Credit to
	OSS-Fuzz)

2018-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Update library versioning for 1.3.30 release.

	* NEWS.txt: Update news for 1.3.30 release.

2018-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Report exception on EOF file
	reading DPX pixel data. Fixes oss-fuzz 8104
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	WriteDPXImage", oss-fuzz 8297 "graphicsmagick/enhance_fuzzer:
	Use-of-uninitialized-value in EnhanceImage", and oss-fuzz 8133
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	RGBTransformPackets". (Credit to OSS-Fuzz)

2018-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cmyk.c (ReadCMYKImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/gray.c (ReadGRAYImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/rgb.c (ReadRGBImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/jpeg.c (ReadJPEGImage): Avoid memory leak of profile
	buffer when longjmp-based exception is thrown while reading a
	profile. Fixes oss-fuzz 8957 "graphicsmagick/enhance_fuzzer:
	Direct-leak in ReadGenericProfile". (Credit to OSS-Fuzz)

2018-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (load_level): Make sure to free 'tile_image' before